# flowmux

./: AGENTS.md  Cargo.toml  LICENSE  README.md  herdr-libghostty-investigation.md  herdr-plan.md  implementation.md  install.sh  plan.md
.github/workflows/: ci.yml  release.yml  update-homebrew-cask.yml
docs/: ARCHITECTURE.md  claude-code-agent-plan.md  claude-code-agent-todo.md  new-agent-dialog-plan.md
docs/brand/: README.md  reference-board.md
docs/brand/enso/: README.md
docs/brand/options/: README.md
docs/brand/sketches/: README.md
src/: agent_discovery.rs  agents.rs  app.rs  config.rs  ghostty.rs  git.rs  global_config.rs  host_terminal.rs  launch.rs  logging.rs  main.rs  model_registry.rs  model_registry_data.rs  models.rs  platform.rs  runner.rs  tmux.rs  tui.rs  ui.rs
src/agents/: claude.rs  codex.rs  opencode.rs  pi.rs
src/agents/claude/: claude_hook_server.rs
src/agents/pi/: flowmux-extension.ts
src/ghostty/: render.rs
src/ui/: agent_view.rs  create_agent.rs  create_project.rs  dashboard.rs  git_viewer.rs  markdown.rs  remove_agent.rs  remove_project.rs  settings.rs  startup_guide.rs  terminal_view.rs  theme.rs
tools/: build-debug-prefetched-libghostty-vt.sh  build-release-prefetched-libghostty-vt.sh  build-universal-macos-prefetched-libghostty-vt.sh  prefetch-libghostty-vt.sh
tools/model-gen/: Cargo.toml
tools/model-gen/src/: main.rs
website/: README.md  astro.config.mjs  package-lock.json  package.json
website/public/: _headers  robots.txt  sitemap.xml
website/public/assets/: screencast-v0.4.0.webm
website/src/components/: HeroPanel.astro  SiteHeader.astro
website/src/layouts/: BaseLayout.astro
website/src/pages/: index.astro
website/src/styles/: global.css
