[package]
name = "flowmux"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
ratatui          = "0.30"
crossterm        = { version = "0.29", features = ["event-stream"] }
unicode-width    = "0.2"
tokio            = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tmux_interface   = { version = "0.4", default-features = false, features = ["tmux_3_3a"] }
regex            = "1"
serde            = { version = "1", features = ["derive"] }
toml             = "0.8"
anyhow           = "1"
clap             = { version = "4", features = ["derive"] }
dirs             = "5"
reqwest          = { version = "0.12", features = ["json", "stream"] }
serde_json       = "1"
tui-markdown     = "0.3"
async-trait      = "0.1"
futures          = "0.3"
axum             = "0.8"
uuid             = { version = "1", features = ["v4"] }
which            = "6"
fs2              = "0.4"
claude-code-transcripts = "0.1.8"
chrono                  = { version = "0.4", default-features = false, features = ["std"] }
git2                    = { version = "0.20", default-features = false }
libc                    = "0.2"
base64                  = "0.22"
libghostty-vt           = { git = "https://github.com/uzaaft/libghostty-rs", rev = "20edad15d7984c727acc4f4facdadf045609f543", default-features = false }
